# datavis

./: .flake8  .pre-commit-config.yaml  AmigaDBC.dbc  README.md  cohere.py  compost-case-study.py  filter.py  graph.py  motor_speeds.py  params.py  plot-current&temp.py  plot-single-csv.py  plot.py  plot_method.py  plot_utils.py  requirements.txt  setup.cfg  time_filter.py  unzip.py  unzip_test.py  utils.py
case_study/: case_study_nominal.py  compost-case-study.py
examples/: turning_test.py
include/: AmigaDBC.dbc  JacobsDBC.dbc
src/datavis/: params.py  plot_utils.py  unzip.py  utils.py
