[metadata]
name = datavis
version = 0.0.1
description = Plot Can logs
long_description = file: README.md
long_description_content_type = text/markdown
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/OloFuchs/datavis
download_url = https://github.com/OloFuchs/datavis
keywords = robotics
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.8

install_requires =
    asammdf
    numpy
    matplotlib
    pandas
    zipfile36


package_dir =
    = src

packages =
    datavis
